[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Ashrf Mathkour Obeidat <ashrfmathkour@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
black = "^21.11b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
